# datasette-block-robots

./: README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
datasette_block_robots/: __init__.py  hookspecs.py
tests/: test_block_robots.py
