[project]
name = "datasette-block-robots"
version = "1.1"
description = "Datasette plugin that blocks all robots using robots.txt"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
dependencies = [
    "datasette>=0.50",
]

[project.urls]
Homepage = "https://github.com/simonw/datasette-block-robots"
Issues = "https://github.com/simonw/datasette-block-robots/issues"
CI = "https://github.com/simonw/datasette-block-robots/actions"
Changelog = "https://github.com/simonw/datasette-block-robots/releases"

[project.entry-points.datasette]
block_robots = "datasette_block_robots"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datasette_block_robots"]
